menambahkan logo almufti

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        
+        <nav>
+            <img src="img/almufti.png" alt="SMAFTI">
+        </nav>
     </div>
 </body>
 </html>
