merubah isi file index.html & style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="container">
         <nav>
-            <img src="img/almufti.png" alt="SMAFTI">
+            <div class="logo">
+                <img src="img/almufti.png" alt="SMAFTI" class="SMAFTI">
+                <img src="img/telkom.png" alt="TELKOM" class="TELKOM">
+                <img src="img/smk.png" alt="SMK" class="SMK">
+            </div>
         </nav>
     </div>
 </body>
