--- a/index.html
+++ b/index.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>5S SMAFTI</title>
 </head>
 <body>
     <div class="container">
+        <!-- NAVIGASI BAR -->
         <nav>
             <div class="logo">
                 <img src="img/almufti.png" alt="SMAFTI" class="SMAFTI">
                 <img src="img/telkom.png" alt="TELKOM" class="TELKOM">
                 <img src="img/smk.png" alt="SMK" class="SMK">
             </div>
+            <div class="text">
+                <a href="#">
+                    <h1>HOME</h1>
+                </a>
+                <a href="#">
+                    <h1>ABOUT</h1>
+                </a>
+                <a href="#">
+                    <h1>LEARNING</h1>
+                </a>
+                <a href="#">
+                    <h1>APPLICATION</h1>
+                </a>
+                <a href="#">
+                    <h1>CONTACT</h1>
+                </a>
+            </div>
         </nav>
+        <!-- akhir NAVIGASI BAR -->
+
+        <!-- POSTER -->
+        <div class="poster">
+            <img src="img/poster.png" alt="POSTER 5S DI INDUSTRI">
+        </div>
+        <!-- AKHIR POSTER -->
     </div>
 </body>
 </html>
