--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
 
         <!-- POSTER -->
         <div class="poster">
-            <img src="img/poster.png" alt="POSTER 5S DI INDUSTRI">
+            <img src="img/poster1.png" alt="POSTER 5S DI INDUSTRI">
         </div>
         <!-- AKHIR POSTER -->
+
+        <!-- image -->
+        <div class="image">
+            <img src="img/2.jpeg" alt="SEIRI">
+            <img src="img/1.jpg" alt="SEITON">
+            <img src="img/4.jpg" alt="SEISO">
+            <img src="img/3.jpg" alt="SEIKETSU">
+            <img src="img/5.jpg" alt="SHITSUKE">
+        </div>
+        <!-- akhir image -->
     </div>
 </body>
 </html>
