--- a/index.html
+++ b/index.html
@@ -9,49 +9,25 @@
     <title>5S SMAFTI</title>
 </head>
 <body>
-    <div class="container">
-        <!-- NAVIGASI BAR -->
-        <nav>
-            <div class="logo">
-                <img src="img/almufti.png" alt="SMAFTI" class="SMAFTI">
-                <img src="img/telkom.png" alt="TELKOM" class="TELKOM">
-                <img src="img/smk.png" alt="SMK" class="SMK">
-            </div>
-            <div class="text">
-                <a href="#">
-                    <h1>HOME</h1>
-                </a>
-                <a href="#">
-                    <h1>ABOUT</h1>
-                </a>
-                <a href="#">
-                    <h1>LEARNING</h1>
-                </a>
-                <a href="#">
-                    <h1>APPLICATION</h1>
-                </a>
-                <a href="#">
-                    <h1>CONTACT</h1>
-                </a>
-            </div>
-        </nav>
-        <!-- akhir NAVIGASI BAR -->
-
-        <!-- POSTER -->
-        <div class="poster">
-            <img src="img/poster1.png" alt="POSTER 5S DI INDUSTRI">
+    <!-- NAVBAR -->
+    <nav>
+        <div id="logo">
+            <img src="img/almufti.png" alt="SMAFTI">
         </div>
-        <!-- AKHIR POSTER -->
-
-        <!-- image -->
-        <div class="image">
-            <img src="img/2.jpeg" alt="SEIRI">
-            <img src="img/1.jpg" alt="SEITON">
-            <img src="img/4.jpg" alt="SEISO">
-            <img src="img/3.jpg" alt="SEIKETSU">
-            <img src="img/5.jpg" alt="SHITSUKE">
+        <div class="burger">
+            <span class="lines"></span>
+            <span class="lines"></span>
+            <span class="lines"></span>
         </div>
-        <!-- akhir image -->
-    </div>
+
+        <ul id="nav-links">
+            <li><a href="#" class="links">Home</a></li>
+            <li><a href="#" class="links">About</a></li>
+            <li><a href="#" class="links">Learning</a></li>
+            <li><a href="#" class="links">Application</a></li>
+            <li><a href="#" class="links">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- AKHIR NAVBAR -->
 </body>
 </html>
