--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
         </ul>
     </nav>
     <!-- AKHIR NAVBAR -->
+
+    <!-- poster -->
+    <figure>
+        <img src="img/poster.png" alt="5S Di Industri">
+    </figure>
+    <!-- akhir poster -->
 </body>
 </html>
