merisize almufti,png & merubah navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- NAVBAR -->
     <nav>
         <div id="logo">
-            <img src="img/almufti.png" alt="SMAFTI">
+            <a href="https://www.smk-almufti.sch.id/" target="_blank">
+                <img src="img/almufti.png" alt="SMAFTI">
+            </a>
         </div>
         <div class="burger">
             <span class="lines"></span>
