--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>5S SMAFTI</title>
 </head>
 <body>
@@ -32,6 +31,10 @@
         </ul>
     </nav>
     <!-- AKHIR NAVBAR -->
+
+    <!-- file script -->
+    <script src="script.js"></script>
+    <!-- akhir file script -->
 
 </body>
 </html>
